--- a/index.html
+++ b/index.html
@@ -44,11 +44,14 @@
     }
 
     /* 粒子星光背景 */
-    #star-bg {
-      position: fixed;
-      inset: 0;
-      z-index: -1;
-      background: #070312;
+  #star-bg {
+  position: fixed;
+  inset: 0;
+  z-index: -1;
+  background:
+    url("LL.jpg") center center / cover fixed no-repeat;
+}
+
     }
 
     /* 锁屏 */
@@ -1305,3 +1308,4 @@ document.getElementById("password-input").addEventListener("keydown", e => {
 
 </body>
 </html>
+
