--- a/links.html
+++ b/links.html
@@ -10,15 +10,18 @@
 
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
+body {
+  font-family: "PingFang SC","Microsoft YaHei",sans-serif;
+  background:
+    radial-gradient(circle at 10% 0%, rgba(0,0,0,0.6) 0, rgba(0,0,0,0.9) 55%),
+    url("LL.jpg") center center / cover fixed no-repeat;
+  color: #f9fafb;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: stretch;
+}
 
-    body {
-      font-family: "PingFang SC","Microsoft YaHei",sans-serif;
-      background: radial-gradient(circle at 10% 0%, #1f2937 0, #020014 45%) fixed;
-      color: #f9fafb;
-      min-height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: stretch;
     }
 
     /* 密码锁（同一套风格） */
